--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/smtx/xray-webservice#readme",
   "devDependencies": {
+    "chimp": "^0.33.1",
     "coffee-script": "^1.10.0",
     "mocha": "^2.4.5",
     "should": "^8.3.1"
