--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "XRay API with Docker support",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/smtx/xray-webservice#readme",
   "devDependencies": {
-    "chimp": "^0.33.1",
-    "coffee-script": "^1.10.0",
-    "mocha": "^2.4.5",
-    "should": "^8.3.1"
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "superagent-charset": "^1.0.0",
+    "x-ray": "^2.2.0"
   }
 }
