Regex on array list

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "XRay API with Docker support",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "mocha --watch"
   },
   "repository": {
     "type": "git",
