--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "XRay API with Docker support",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "./node_modules/.bin/mocha --reporter spec",
     "watch": "mocha --watch"
   },
   "repository": {
@@ -26,7 +26,8 @@
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "slackbots": "^0.5.1",
     "superagent-charset": "^1.0.0",
-    "x-ray": "^2.2.0"
+    "x-ray": "^2.3.0"
   }
 }
